# pdfsuite

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CommonErrors.md  Makefile  README.md  agents.md  index.html  init_pdfsuite_repo.sh  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
ARCHITECTURE_OVERVIEW/: index.html
CONTRIBUTOR_GUIDE/: index.html
DOCS_INDEX/: index.html
GUI_OVERVIEW/: index.html
GUI_TECH/: index.html
GUI_USER_GUIDE/: index.html
GUI_WIREFRAMES/: index.html
OPERATOR_GUIDE/: index.html
PROJECT_LAUNCH/: index.html
RELEASE_PLAYBOOK/: index.html
ROADMAP/: index.html
SECURITY_PRIVACY/: index.html
TESTING_HANDBOOK/: index.html
TROUBLESHOOTING_FAQ/: index.html
docs/: ARCHITECTURE_OVERVIEW.md  CONTRIBUTOR_GUIDE.md  DOCS_INDEX.md  GUI_OVERVIEW.md  GUI_SCREENSHOTS.md  GUI_TECH.md  GUI_USER_GUIDE.md  GUI_WIREFRAMES.md  OPERATOR_GUIDE.md  PROJECT_BOARD.md  PROJECT_LAUNCH.md  RELEASE_PLAYBOOK.md  ROADMAP.md  SECURITY_PRIVACY.md  SURFER_FIGURE_EXPORT.md  TESTING_HANDBOOK.md  TROUBLESHOOTING_FAQ.md  index.md
gui/: __init__.py  main.py
pdfsuite/: __main__.py
project_board_seed/: cli_coverage_expansion.md  contributor_guide_refresh.md  doc_lint_enforcement.md  gui_shell_mvp.md  gui_smoke_ci.md  security_privacy_gate.md  windows_smoke_parity.md
scripts/: doctor.py  install_linux.sh  install_windows.ps1  seed_project_board.sh  smoke_test.sh
search/: search_index.json
tests/: conftest.py  test_cli.py  test_commands_audit.py  test_commands_bookmarks.py  test_commands_compare.py  test_commands_figure.py  (+6 more)
(+78 files in other folders)
