[project]
name = "pdfsuite"
version = "0.2.0"
description = "All-FOSS Acrobat-grade PDF toolkit with a unified CLI"
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"
dependencies = [
  "typer[all]",
  "rich",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
docs = [
  "mdformat>=0.7",
  "pre-commit>=3.5",
]
gui = [
  "PySide6>=6.6",
  "platformdirs>=4.2",
]

[project.scripts]
pdfsuite = "pdfsuite.__main__:app"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=pdfsuite --cov-report=term-missing --cov-fail-under=60"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["pdfsuite*", "gui*"]

[tool.setuptools.package-data]
"gui.assets" = ["3d_viewer/*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
